<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".infoAmpliada">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:cardBackgroundColor="@color/titulo"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline7"
        app:layout_constraintStart_toStartOf="@+id/guideline6"
        app:layout_constraintTop_toTopOf="@+id/guideline8"
        app:layout_constraintVertical_bias="0.565">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/et_nombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gazelle"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/et_tagline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="TextView"
                android:textAlignment="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/et_nombre" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/guideline13"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/et_tagline" />

            <ImageView
                android:id="@+id/im_cerveza"
                android:layout_width="80dp"
                android:layout_height="96dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline13"
                tools:srcCompat="@tools:sample/avatars" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:cardBackgroundColor="@color/color_fondo"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toEndOf="@+id/im_cerveza"
                app:layout_constraintTop_toTopOf="@+id/guideline13">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/ebc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/texto_ebc"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/et_srm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/texto_srm"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/et_targefg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="62dp"
                        android:text="@string/texto_fg"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/et_ph"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/texto_ph"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_srm" />

                    <TextView
                        android:id="@+id/et_ibu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="40dp"
                        android:text="@string/texto_ibu"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/et_targetog"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="90dp"
                        android:text="@string/texto_og"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/et_abv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/texto_abv"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/atenuationLevel"
                        android:layout_width="95dp"
                        android:layout_height="17dp"
                        android:layout_marginTop="92dp"
                        android:layout_marginEnd="40dp"
                        android:text="TextView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="20dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="106dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="228dp" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="248dp"
                android:text="@string/texto_ingredientes"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lupulo_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="68dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toBottomOf="@+id/et_lupulo" />

            <TextView
                android:id="@+id/et_lupulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="68dp"
                android:text="@string/texto_lupulo"
                android:textAllCaps="true"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <TextView
                android:id="@+id/et_cantidad_hops"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="68dp"
                android:text="TextView"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintTop_toBottomOf="@+id/lupulo_nombre" />

            <TextView
                android:id="@+id/et_cantidad_malta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/malta_nombre"
                app:layout_constraintTop_toBottomOf="@+id/malta_nombre" />

            <TextView
                android:id="@+id/malta_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="@+id/et_malta"
                app:layout_constraintTop_toBottomOf="@+id/et_malta" />

            <TextView
                android:id="@+id/et_malta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="56dp"
                android:text="@string/texto_malta"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toTopOf="@+id/guideline14" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="44dp"
                app:cardBackgroundColor="@color/color_fondo"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/cardView3">

                <TextView
                    android:id="@+id/et_brewers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="TextView"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="italic" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="132dp"
                app:cardBackgroundColor="@color/color_fondo"
                app:cardCornerRadius="20dp"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/textView13">

                <TextView
                    android:id="@+id/et_food"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:text="TextView"
                    android:textSize="18sp"
                    android:textStyle="italic" />
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.96" />
</androidx.constraintlayout.widget.ConstraintLayout>