<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imagen_cerveza"
                    android:layout_width="111dp"
                    android:layout_height="110dp"
                    android:layout_marginBottom="2dp"
                    android:cropToPadding="false"
                    android:scaleType="centerInside"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/caja_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/cerveza_texto"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                app:srcCompat="@drawable/trigo" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/etiqueta_nombre"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:layout_weight="1"
                                    android:text="@string/texto_malta"
                                    android:textAlignment="textStart"
                                    android:textColor="@android:color/holo_orange_dark"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginStart="10dp"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/malta_etiqueta"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="TextView"
                                    android:textColor="@color/black"
                                    android:textStyle="italic" />

                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_weight="1"
                                app:srcCompat="@drawable/hops" />

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/textView3"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:text="@string/texto_lupulo"
                                    android:textColor="@android:color/holo_orange_dark"
                                    android:textStyle="bold" />
                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="horizontal">

                                <TextView
                                    android:id="@+id/etiqueta_lupulo"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="10dp"
                                    android:layout_weight="1"
                                    android:text="TextView"
                                    android:textColor="@color/black"
                                    android:textStyle="italic" />
                            </LinearLayout>
                        </LinearLayout>
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>